objects/ASI_GnH_Actual_Recipient__c.object
<CustomObject>
    <description>G&amp;H Actual Recipient in relationship with G&amp;H Recipient Master, as an intermediate object for linking to other object for storing the Actual Recipients, used by following countries: 
- Korea</description>
    <fields>
        <fullName>ASI_GnH_Company_Address__c</fullName>
        <formula>ASI_GnH_Recipient__r.ASI_GnH_Company_Address__c</formula>
        <label>Company Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Email__c</fullName>
        <formula>ASI_GnH_Recipient__r.ASI_GnH_Email__c</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Mobile__c</fullName>
        <formula>ASI_GnH_Recipient__r.ASI_GnH_Mobile__c</formula>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Organization__c</fullName>
        <formula>ASI_GnH_Recipient__r.ASI_GnH_Organization__c</formula>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Recipient_Name__c</fullName>
        <formula>ASI_GnH_Recipient__r.Name</formula>
        <label>Recipient Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>G&amp;H Recipient</label>
        <referenceTo>ASI_GnH_Recipient_Master__c</referenceTo>
        <relationshipLabel>G&amp;H Actual Recipients</relationshipLabel>
        <relationshipName>GnH_Actual_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Title__c</fullName>
        <formula>ASI_GnH_Recipient__r.ASI_GnH_Title__c</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>T&amp;E Details</label>
        <referenceTo>ASI_TnE_ClaimDetail__c</referenceTo>
        <relationshipLabel>G&amp;H Actual Recipients</relationshipLabel>
        <relationshipName>G_H_Actual_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>G&amp;H Actual Recipient</label>
    <nameField>
        <displayFormat>GHA-{000000}</displayFormat>
        <label>G&amp;H Actual Recipient No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>G&amp;H Actual Recipients</pluralLabel>
    <recordTypes>
        <fullName>ASI_GnH_KR_Actual_Recipient</fullName>
        <active>true</active>
        <label>ASI GnH KR Actual Recipient</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>